# ihodes.github.io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
css/: pygmentize-solarized-light.css  style.css
generator/: __main__.py  generate.py
notes/: __main__.py  generate.py
posts/: 2024-03-03-product-management-experiment-types.md  2024-03-09-ownership-agency.md  2024-04-27-learn-work-hard.md  2025-02-16-bottlenecks.md  business-logic-in-minutes-not-weeks.md  clojure-atlas.md  clojure-io-p1.md  clojurists-guide-to-java.md  deep_dive_into_slow_sqlite3_queries.md  e-and-clojure.md  everyday-personal-productivity.md  experiment-types-in-product-development-ii.md  finding-e-randomly.md  fintech-hackathon-and-global-fx.md  lovely-pianobar.md  next-generation-sequencing-a-gentle-introduction.md  set-theory-and-lisp.md  simple-models.md  test.md  the-golden-ratio-is-evil.md  tmux-simply-explained.md
templates/: about.html  base.html  index.html  nec.html  post.html  recipes.html  shelf.html  sitemap.xml  sliderule.html
