[tool.poetry]
name = "notes"
version = "0.0.1"
description = "Isaac's blog."
authors = ["ihodes <isaachodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
markdown2 = "^2.4.12"
pygments = "^2.17.2"
jinja2 = "^3.1.2"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
